Header overflow fix

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -35,7 +35,7 @@
   background: #f4f5f6;
   border-bottom: .1rem solid #d1d1d1;
   display: block;
-  height: 5.2rem;
+  // height: 5.2rem;
   left: 0;
   max-width: 100%;
   position: fixed;
