--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -20,7 +20,6 @@ pre{padding: 1em;}
 .container{
   margin: 0 auto;
   max-width: 80.0rem;
-  padding: 0 2.0rem;
   position: relative;
   width: 100%
 }
@@ -57,7 +56,7 @@ header {
   width: 100%;
   background: #fdfdfd;
   border-bottom: 1px solid #eaeaea;
-  margin-bottom: 2rem;
+  margin-bottom: 2em;
 }
 header section {
   align-items: center;
